--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-data-table-component": "^6.11.7",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "typescript": "^4.2.3",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
     "concurrently": "^6.0.0"
   }
 }
