--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"json-server data.json --port 3001\"",
+    "start": "concurrently \"react-scripts start\" \"json-server db.json --port 3001\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
